--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "shadcn": "^2.3.0",
