--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "calendar": "^0.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
