--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "latest",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
+    "punycode": "^2.3.1",
     "react": "19.0.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "19.0.0",
